Navbar Responsiveness issue fixed, Fixed the reload middle navigation open, Fixed avatar visibilty when screen is small

--- a/client/src/CSS/Reg&Log.css
+++ b/client/src/CSS/Reg&Log.css
@@ -192,6 +192,10 @@ body {
         position: absolute;
     }
 
+    .img-visible{
+        visibility: visible;
+    }
+
     .passwordCheckList li {
         position: relative;
         text-align: left;
